# ByeolDDang

outputs/: 00-Index.md  01-PRD.md  02-User-Flow.md  03-Information-Architecture.md  04-DB-Schema.md  05-API-Spec.md  06-Tech-Stack.md  07-Architecture.md  08-Roadmap.md  09-Token-System.md  10-Deployment-Railway.md
workspace/: .gitignore  README.md  docker-compose.yml
workspace/assets/: README.md
workspace/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
workspace/backend/alembic/: env.py
workspace/backend/alembic/versions/: 0001_initial.py  0002_token_system.py
workspace/backend/app/: main.py
workspace/backend/app/core/: config.py  db.py  exceptions.py  security.py
workspace/backend/app/models/: __init__.py  _base.py  payment.py  property.py  review.py  user.py  wallet.py
workspace/backend/app/routers/: admin.py  auth.py  properties.py  purchase.py  reviews.py  wallet.py
workspace/backend/app/schemas/: admin.py  auth.py  property.py  purchase.py  review.py  wallet.py
workspace/backend/app/services/: admin_service.py  auth_service.py  property_service.py  purchase_service.py  review_service.py  wallet_service.py
workspace/backend/scripts/: seed.py
workspace/frontend/: .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
workspace/frontend/app/: layout.tsx  page.tsx
workspace/frontend/hooks/: useAuthBootstrap.ts
workspace/frontend/lib/: api.ts  format.ts  types.ts
workspace/frontend/mocks/: properties.ts
workspace/frontend/scripts/: generate-favicon.py
(+35 files in other folders)
